# KDTree

./: .gitignore  CMakeLists.txt  Distance.h  Point.h  data.txt  input.txt  main.cpp  main2.cpp  vectorize.cpp
